feat: 전략 패턴을 활용한 RandomUtil 구현